--- a/AgricultureR/css/custom427.css
+++ b/AgricultureR/css/custom427.css
@@ -22,7 +22,7 @@ form ul li:hover{
 	width: 100%;
 	height: 40px;
 	background-color: #229A56;
-	position: fixed;
+	/*position: fixed;*/
 	bottom: 0px;
 	text-align: center;
 	color: #FFFFFF;
@@ -30,6 +30,15 @@ form ul li:hover{
 	vertical-align: middle;
 	line-height: 40px;
 	font-size: 1.2em;
+}
+.paneLevel1{
+	width: 100%;
+	height: calc(100% - 104px);
+	height: -moz-calc(100% - 104px);
+	height: -webkit-calc(100% - 104px);
+	margin: 0px;
+	padding: 0px;
+	
 }
 .logoPane{
 	width: 30%;
