--- a/AgricultureR/css/custom427.css
+++ b/AgricultureR/css/custom427.css
@@ -747,6 +747,13 @@ button:hover{
 	background-color: #EDEDED;
 	display: table;
 }
+.queryPane_sjfx{
+	width: 100%;
+	height: 45px;
+	background-color: #EDEDED;
+	display: table;
+	border-bottom: solid 3.5px #229A56;
+}
 .filter_tip{
 	/*float: left;*/
 	vertical-align: middle;
@@ -769,5 +776,23 @@ button:hover{
 	height: calc(100% - 45px);
 	height: -moz-calc(100% - 45px);
 	height: -webkit-calc(100% - 45px);
+}
+
+#tabContents_sjfx{
+	width: 100%;
+	height: calc(100% - 90px);
+	height: -webkit-calc(100% - 90px);
+	height: -moz-calc(100% - 90px);
+}
+.sjfx_TabPane{
+	border-bottom: solid 1.5px #F1A01B;
+}
+.sjfx_TabPane li[class = 'active']>a{
+	background-color: #F1A01B;
+	color: white;
+}
+.sjfx_TabPane li[class = 'active'] a:focus{
+	background-color: #F1A01B;
+	color: white;
 }
 
